All changes made so far

--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ORC Cleaning</title>
+		<title>List of Types of Cleaning Services Offered</title>
 
 		<!-- Bootstrap CSS file -->
 		<!-- CSS -->
@@ -15,10 +15,10 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 		<!-- FontAwesome icons -->
-		<link rel="stylesheet" href="./css/all.min.css">
+		<link rel="stylesheet" href="/css/all.min.css">
 
 		<!-- Custom CSS file -->
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="/css/style.css">
 	</head>
 
 	<body>
@@ -110,81 +110,25 @@
 
 			<!-- Start Carousel -->
 
-			<div class="text-center second-section" id="about-us">
-				<h2 class="level-heading-two">Who We Are</h2>
-				<p>
-					Are you looking for a property-cleaning or roof-cleaning company that offers 
-					affordable cleaning services? If your property is dirty, 
-					residential or commercial, ORC Roof Cleaning has a team 
-					of professional cleaners that can clean it for you in the 
-					most cost-effective and convenient fashion. With more 
-					than 20 years of experience in cleaning residential and 
-					commercial properties, we should be your go-to cleaning 
-					company for all cleaning services. If you are in Orlando, 
-					FL and the surrounding areas, we are the right choice for everything from 
-					pressure washing to gutter cleaning to all other types of cleaning services.
-				</p>
-			</div>
-
-			<div class="text-center second-section-alternate">
-				<h2 class="level-heading-two">What We Do</h2>
-				<p>
-					We are an exterior roof cleaning, pressure washing company 
-					that specializes in all roof cleaning, pool enclosure, soft wash, 
-					surfaces of large areas, and all types of exterior cleaning 
-					services. We also specialize in gutter cleaning for both residential 
-					and commercial properties. We serve our clients with respect, integrity, 
-					and professionalism. You can always give us a call if you want your 
-					property to be spotless. Pressure washing is one of the best methods 
-					of cleaning any type of surface. For both commercial and residential 
-					structures - from patios to sidewalks to home exteriors - we all make 
-					sure that your property is super clean. Pressure washing is the most 
-					amazing way to restore or maintain the look of any property. Real estate 
-					agents always recommend that potential sellers invest in the types of 
-					cleaning services that we offer in order to boost the listing prices 
-					of homes. Pressure washing is one of the easiest and efficient ways 
-					to remove salt and dirt deposits that create surface weathering. 
-					ORC Roof Cleaning can achieve all of this in the most convenient and cost-effective
-					manner possible.
-				</p>
-			</div>
-
-			<div class="text-center second-section">
-				<h2 class="level-heading-two">How We Do It</h2>
-				<p>
-					All cleaning services are provided using top quality cleaning 
-					products and equipment for maximum results. On top of that, 
-					we use methods that are industry standards to complete any 
-					cleaning job with ease. If you need a roof cleaning company 
-					in Orlando, FL and the surrounding areas that also offers all 
-					types of exterior cleaning services for both residential and 
-					commercial properties, give ORC Roof Cleaning a call. 
-				</p>
-			</div>
-
 			<!--Services-->
-			<div class="text-center second-section-alternate"> 
-				<h2 class="level-heading-two">Services Offered</h2>
+			<div class="container">
 				<div class="row">
-					<div class="col-sm">
-						<div>
-							<img src="/icons/icon-building-cleaning.png" alt="">
+					<div class="col-sm-8">
+						<h2 class="level-heading-two" style="padding-top: 1.5rem;">The Cleaning Services We Offer</h2>
+						<div class="text-center second-section" id="softwash">
 							<h3 class="level-heading-three">Softwash</h3>
 							<p>
-								ORC Roof Cleaning is a cleaning company in Orlando, FL that offers 
-								quality soft wash services in the city and in the surrounding areas. 
-								Our cleaning specialists are equipped with the knowledge and expertise 
-								to maintain and clean your roof through soft-washing procedures. We 
-								always use the proper equipment for soft washing, 
-								and we also use special cleaning solutions that will get rid of all 
-								stains without damaging the surfaces.
+								ORC Roof Cleaning is a cleaning company in Orlando, FL that 
+								offers quality soft wash services in the city and in the 
+								surrounding areas. Our cleaning specialists are equipped 
+								with the knowledge and expertise to maintain and clean your 
+								roof through soft-washing procedures. We always use the proper 
+								equipment for soft washing, and we also use special cleaning 
+								solutions that will get rid of all stains without damaging the surfaces.
 							</p>
 						</div>
-					</div>
 
-					<div class="col-sm">
-						<div>
-							<img src="/icons/icon-carpet-cleaning.png" alt="">
+						<div class="text-center second-section-alternate" id="exterior-pressure-washing">
 							<h3 class="level-heading-three">Exterior Pressure Washing</h3>
 							<p>
 								There are a variety of reasons why it’s important to keep 
@@ -194,141 +138,178 @@
 								regular cleaning is not enough to remove all stains and dirt 
 								in your walkways, sidewalks, and driveways. Once your outdoor 
 								areas start getting dirty, it will only get worse, so the only 
-								choice will be to get those areas pressure washed. Fortunately, 
+								choice will be to get those areas pressure washed. Fortunately,
 								for the people living in Orlando, FL and the surrounding areas, 
-								ORC Roof Cleaning offers excellent exterior pressure washing services. 
+								ORC Roof Cleaning offers excellent exterior pressure washing services.
 							</p>
 						</div>
-					</div>
 
-					<div class="col-sm">
-						<div>
-							<img src="/icons/icon-commercial-cleaning.png" alt="">
+						<div class="text-center second-section" id="pool-enclosure-cleaning">
 							<h3 class="level-heading-three">Pool Enclosure Cleaning</h3>
 							<p>
 								Homeowners can clean their pool enclosures on their own. 
-								However, if they’re not familiar with the process, they 
-								might end up damaging the screen of the enclosure. They 
-								might also fail to clean every section of the enclosure, 
-								which means that the enclosure will still remain dirty. 
-								So, instead of homeowners cleaning their pool enclosures 
-								all by themselves, they should hire cleaning professionals 
-								like us. When you enlist our pool enclosure cleaning 
-								services, we will keep your pool enclosure dirt-free. 
-								We will clean every inch of your pool enclosure, and ORC 
-								cleaning specialists use high-quality cleaning products 
-								as well as modern tools and methods. 
+								However, if they’re not familiar with the process, they might 
+								end up damaging the screen of the enclosure. They might also 
+								fail to clean every section of the enclosure, which means 
+								that the enclosure will still remain dirty. So, instead of 
+								homeowners cleaning their pool enclosures all by themselves, 
+								they should hire cleaning professionals like us. When you enlist 
+								our pool enclosure cleaning services, we will keep your pool 
+								enclosure dirt-free. We will clean every inch of your pool 
+								enclosure, and ORC cleaning specialists use high-quality cleaning 
+								products as well as modern tools and methods.
 							</p>
 						</div>
-					</div>
-				</div>
 
-				<div class="row">
-					<div class="col-sm">
-						<div>
-							<img src="/icons/icon-janitorial-services.png" alt="">
+						<div class="text-center second-section-alternate" id="roof-cleaning">
 							<h3 class="level-heading-three">Roof Cleaning</h3>
 							<p>
-								If you are a homeowner or a commercial property owner, one 
-								of the most important responsibilities is to keep your 
+								If you are a homeowner or a commercial property owner, 
+								one of the most important responsibilities is to keep your 
 								property maintained and clean. However, this does not mean 
 								that you are on your own. When it comes to your roof cleaning 
-								needs, do not hesitate to give ORC Roof Cleaning a call 
-								if you’re in Orlando, FL or the surrounding areas. We are a 
+								needs, do not hesitate to give ORC Roof Cleaning a call if 
+								you’re in Orlando, FL or the surrounding areas. We are a 
 								renowned roof cleaning company that has been in the roof 
 								cleaning business for close to a decade. ORC Roof Cleaning 
 								specializes in both residential and commercial services. 
-								If you need help with cleaning the roof of your home or 
-								your commercial property, our team of professional cleaners 
-								are here for you.
+								If you need help with cleaning the roof of your home or your 
+								commercial property, our team of professional cleaners are here for you.
 							</p>
 						</div>
-					</div>
 
-					<div class="col-sm">
-						<div>
-							<img src="/icons/icon-post-construction.png" alt="">
+						<div class="text-center second-section" id="gutter-cleaning">
 							<h3 class="level-heading-three">Gutter Cleaning</h3>
 							<p>
-								For property owners in Orlando, FL, ORC Roof Cleaning should 
-								be their go-to cleaning company whenever their gutter systems 
-								are clogged up and dirty. They can always count on us to provide 
-								them with quality cleaning services. We have been providing 
-								exceptional gutter cleaning services to the property owners 
-								in the city of Orlando, FL and the surrounding areas since 2011. 
-								With almost a decade in existence as a gutter cleaning company, 
-								our company has gained a good reputation as a cleaning service provider. 
+								For property owners in Orlando, FL, ORC Roof Cleaning 
+								should be their go-to cleaning company whenever their 
+								gutter systems are clogged up and dirty. They can always 
+								count on us to provide them with quality cleaning services. 
+								We have been providing exceptional gutter cleaning services 
+								to the property owners in the city of Orlando, FL and the 
+								surrounding areas since 2011. With almost a decade in 
+								existence as a gutter cleaning company, our company has 
+								gained a good reputation as a cleaning service provider.
 							</p>
 						</div>
-					</div>
 
-					<div class="col-sm">
-						<div>
-							<img src="/icons/move-in-move-out-cleaning-icon.png" alt="">
+						<div class="text-center second-section-alternate" id="pressure-washing">
 							<h3 class="level-heading-three">Pressure Washing</h3>
 							<p>
 								ORC has close to a decade of experience in the pressure 
 								washing business. Gutter washing is one of the more popular 
-								cleaning services that our company offers. Our mission 
-								is to make sure that every gutter system that we clean 
-								is free of debris, dirt, and other blockages. We use modern 
+								cleaning services that our company offers. Our mission is 
+								to make sure that every gutter system that we clean is 
+								free of debris, dirt, and other blockages. We use modern 
 								cleaning techniques so that properties’ gutters are cleaned 
-								in the most effective and efficient manner. When you hire our 
-								cleaning specialists, you will always get exceptional services. 
-								Most of the time, regular debris removal from the gutters are 
-								done manually. Although this is an easier way of cleaning your 
-								property’s gutters, it is not the best method. A professional 
-								pressure washer is the right tool for that kind of job. 
-								For all your gutter cleaning needs in Orlando, FL and the 
-								surrounding areas, contact ORC Roof Cleaning now. 
+								in the most effective and efficient manner. When you hire 
+								our cleaning specialists, you will always get exceptional 
+								services. Most of the time, regular debris removal from the 
+								gutters are done manually. Although this is an easier way 
+								of cleaning your property’s gutters, it is not the best method. 
+								A professional pressure washer is the right tool for that 
+								kind of job. For all your gutter cleaning needs in Orlando, 
+								FL and the surrounding areas, contact ORC Roof Cleaning now.
+							</p>
+						</div>
+
+						<div class="text-center second-section" id="roof-pressure-washing">
+							<h3 class="level-heading-three">Roof Pressure Washing</h3>
+							<p>
+							</p>
+						</div>
+
+						<div class="text-center second-section-alternate" id="pool-enclosure">
+							<h3 class="level-heading-three">Pool Enclosure</h3>
+							<p>
 							</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-sm">
-					<p></p>
-				</div>
-					<div>
-						<p style="font-weight: bold;">
-							On top of the above cleaning services, we offer other 
-							types of cleaning services. Visit our <a href="">services</a> page for 
-							a list of all the cleaning services that we offer.
-						</p>
+
+					<div class="col-sm-4">
+						<h2 class="level-heading-two" style="padding-top: 1.5rem;">Services List</h2>
+						<div>
+							<ul style="list-style-type: none;">
+								<li>
+									<i class="fas fa-check"></i> 
+									Pressure Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Roof Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Gutter Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Pool Enclosure
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Vinyl Fence Pressure Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Exterior Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Concrete Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Sidewalk Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Driveway Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Exterior Soft Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Low Pressure Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Low Pressure Cleaning
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Exterior Pressure Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Parking & Garage Pressure Washing
+								</li>
+
+								<li>
+									<i class="fas fa-check"></i>
+									Residential and Commercial Services
+								</li>
+							</ul>
+						</div>
 					</div>
+
 				</div>
 			</div>
-
-			<div class="text-center second-section" id="areas-served">
-				<h2 class="level-heading-two">Areas Served</h2>
-				<p>
-					ORC Roof Cleaning is a pressure washing company that specializes 
-					in pool enclosure cleaning, roof cleaning, the cleaning of large 
-					surface areas, and exterior cleaning services. On top of those 
-					cleaning services mentioned, we also provide gutter pressure washing 
-					services. If you’re trying to find an exterior pressure washing expert, 
-					don’t go anywhere else. You’re at the right place. With almost a 
-					decade of experience in this business, we can confidently say that 
-					we can complete every cleaning task properly and quickly. We always 
-					serve our residential and commercial customers with respect, integrity, 
-					and the utmost level of professionalism. We work with clients in the 
-					city or Orlando, FL and the following areas:
-					<ul style="list-style-type: none;">
-						<li>Gotha, FL</li>
-						<li>Lockhart, FL</li>
-						<li>Oakland, FL</li>
-						<li>Windermere, FL</li>
-						<li>Bay Hill, FL</li>
-					</ul>
-				</p>
-				<p>
-					<span class="badge badge-primary">Gotha, FL</span> 
-					<span class="badge badge-primary">Lockhart, FL</span> 
-					<span class="badge badge-primary">Oakland, FL</span> 
-					<span class="badge badge-primary">Windermere, FL</span> 
-					<span class="badge badge-primary">Bay Hill, FL</span> 
-				</p>
-			</div>
-
 			<!--End of services-->
 
 			<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -423,7 +404,7 @@
 			<footer class="pt-4 my-md-5 pt-md-5 border-top container">
 				<div class="row">
 					<div class="col-12 col-md">
-						<img class="mb-2" src="icons/logo.png" alt="" height="24">
+						<img class="mb-2" src="/icons/logo.png" alt="" height="24">
 						<small class="d-block mb-3 text-muted">Copyright &copy; 2020 ORC Roof Cleaning. All rights reserved.</small>
 					</div>
 					<div class="col-6 col-md">
