Modify FAQs and Testimonials pages

--- a/pages/FAQs.html
+++ b/pages/FAQs.html
@@ -108,6 +108,9 @@
 			</div>
 
 			<!-- End Jumbotron --> 
+			<div class="container">
+				<h2>Answers to Frequently Asked Questions</h2>
+			</div>
 
 			<!-- Start Carousel -->
 
