--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -108,6 +108,9 @@
 			</div>
 
 			<!-- End Jumbotron --> 
+			<div class="container">
+				<h2>Customer testimonials</h2>
+			</div>
 
 			<!-- Start Carousel -->
 
