--- a/pages/FAQs.html
+++ b/pages/FAQs.html
@@ -107,6 +107,32 @@
 				</div>
 			</div>
 
+			<div class="text-center second-section" id="about-us">
+				<h2 class="level-heading-two">Frequently Asked Questions (FAQs)</h2>
+				<p>Does your home look a bit unsightly on the outside? Do you see dirt and lots of blemishes on your exterior surfaces? If the answer is yes, obviously, your property needs pressure washing. By hiring Handy Multi Service LLC to execute the job, your home will be transformed into something amazing.</p>
+				<p><strong>What do you exactly do?</strong></p>
+				<p>Our team specializes in professional pressure washing services, including roof cleaning, pool enclosure cleaning, gutter cleaning, and washing all kinds of exterior structures and materials. You can hire us to treat&nbsp;your driveway, sidewalks, fence, garage, or parking lot in Orlando, FL.</p>
+				<p><strong>I have such equipment. Why do I need your services?</strong></p>
+				<p>In the right hands, a low-pressure washer could be the most effective tool for removing grime, grease, and stubborn stains. However, in the hands of an inexperienced person, it can quickly turn into a dangerous tool and cause damage. We are trained to treat all sorts of materials and surfaces with the necessary care and precision without the risk of damage.</p>
+				<p><strong>Is there a difference between pressure and power washing?</strong></p>
+				<p>Yes. Both pieces of equipment serve the same purpose, but the first one works with cold water whereas power washers use hot water to clean surfaces.</p>
+				<p><strong>Do you use chemicals?</strong></p>
+				<p>Only when that is necessary. More often than not, our crew avoids using any cleaners due to the risk of material damage and environmental impact.</p>
+				<p><strong>When was your company founded?</strong></p>
+				<p>Handy Multi Service LLC is a professional roofing cleaning company that was founded in 2011, and we have been working in this industry for 10-years now.</p>
+				<p><strong>When can I call you?</strong></p>
+				<p>You can talk to our professionals every day of the week. We offer emergency services and work weekends by appointment only.</p>
+				<p><strong>How often do I have to pressure wash my house or roof?</strong></p>
+				<p>The answer to this question depends on the age of the structure, its overall condition, and the local climate. We advise all our clients to plan such an efficient cleaning method at least once a year. Sticking to a specific maintenance plan will keep your residential or commercial property neat and beautiful and save you money on costly repairs.</p>
+				<p><strong>How much do you charge?</strong></p>
+				<p>We would like to assure you that our rates are very competitive and beat most of the local contractors’ fees. But that’s not all! Our roof pressure cleaning company offers some of the most amazing specials and discounts. For more information, call our technicians today.</p>
+				<p><strong>Can your machines damage my house?</strong></p>
+				<p>This is not likely to happen. Our trained and experienced staff knows how to work with pressure cleaners. A&nbsp;DIY effort often ends up with damage though.</p>
+				<p><strong>Is your business legitimate?</strong></p>
+				<p>Yes, it is. We have a business license and insurance. Our company is certified and offer warranties as well.</p>
+				<p>Are looking for the most effective and reliable local <a title="Roof and Gutter Cleaning in Orlando, FL" href="/index.html">roof and gutter cleaning</a> service in Orlando, FL? Do not wait, contact our team at (407) 960-8256 and book your appointment. Turn your home or office building in an attractive and welcoming place. Call us now.</p>
+			</div>
+
 			<!-- End Jumbotron --> 
 
 			<!-- Start Carousel -->
