--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -107,6 +107,18 @@
 				</div>
 			</div>
 
+			<div class="text-center second-section" id="about-us">
+				<h2 class="level-heading-two">Testimonials</h2>
+				<h3>Make Sure You Visit Our Official Google Business Page for More Information!</h3>
+				<p>
+					If it’s still difficult for you to figure out whether we 
+					are your ideal choice for a roofing cleaning company or not, 
+					make sure you visit our official Google Business Page for more 
+					information and read all the reviews written by our happy clients. 
+					Are you one of them? Write your own review, and let us know what you think.
+				</p>
+			</div>
+
 			<!-- End Jumbotron --> 
 
 			<!-- Start Carousel -->
