fixed all urls to relative path

--- a/pages/services.html
+++ b/pages/services.html
@@ -25,7 +25,7 @@
 		<!-- *********************** Start header area *********************** -->
 		<header class="fixed-top">
 			<nav class="navbar navbar-expand-md navbar-dark bg-dark" id="mainNav">
-				<a class="navbar-brand" href="/index.html">ORC Roof Cleaning</a>
+				<a class="navbar-brand" href="./index.html">ORC Roof Cleaning</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -34,53 +34,53 @@
 				<div class="navbar-collapse collapse justify-content-end" id="navbarResponsive">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="/index.html">Home</a>
+							<a class="nav-link" href="./index.html">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/index.html#about-us">About Us</a>
+							<a class="nav-link" href="./index.html#about-us">About Us</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="/pages/services.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+							<a class="nav-link dropdown-toggle" href="./pages/services.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown03">
-								<a class="dropdown-item" href="/pages/services.html#pressure-washing">Pressure Washing</a>
+								<a class="dropdown-item" href="./pages/services.html#pressure-washing">Pressure Washing</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#roof-pressure-washing">Roof Pressure Washing</a>
+								<a class="dropdown-item" href="./pages/services.html#roof-pressure-washing">Roof Pressure Washing</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#pressure-washing">Exterior Pressure Washing</a>
+								<a class="dropdown-item" href="./pages/services.html#pressure-washing">Exterior Pressure Washing</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#softwash">Softwash</a>
+								<a class="dropdown-item" href="./pages/services.html#softwash">Softwash</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#gutter-cleaning">Gutter Cleaning</a>
+								<a class="dropdown-item" href="./pages/services.html#gutter-cleaning">Gutter Cleaning</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#roof-cleaning">Roof Cleaning</a>
+								<a class="dropdown-item" href="./pages/services.html#roof-cleaning">Roof Cleaning</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#pool-enclosure">Pool Enclosure</a>
+								<a class="dropdown-item" href="./pages/services.html#pool-enclosure">Pool Enclosure</a>
 								<div class="dropdown-divider"></div>
 
-								<a class="dropdown-item" href="/pages/services.html#pool-enclosure-cleaning">Pool Enclosure Cleaning</a>
+								<a class="dropdown-item" href="./pages/services.html#pool-enclosure-cleaning">Pool Enclosure Cleaning</a>
 								<div class="dropdown-divider"></div>
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/index.html#areas-served">Areas Served</a>
+							<a class="nav-link" href="./index.html#areas-served">Areas Served</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/pages/gallery.html">Gallery</a>
+							<a class="nav-link" href="./pages/gallery.html">Gallery</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/pages/testimonials.html">Testimonials</a>
+							<a class="nav-link" href="./pages/testimonials.html">Testimonials</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/pages/FAQs.html">FAQs</a>
+							<a class="nav-link" href="./pages/FAQs.html">FAQs</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/index.html#contact-us">Contact Us</a>
+							<a class="nav-link" href="./index.html#contact-us">Contact Us</a>
 						</li>
 					</ul>
 				</div>
@@ -404,7 +404,7 @@
 			<footer class="pt-4 my-md-5 pt-md-5 border-top container">
 				<div class="row">
 					<div class="col-12 col-md">
-						<img class="mb-2" src="/icons/logo.png" alt="" height="24">
+						<img class="mb-2" src="./icons/logo.png" alt="" height="24">
 						<small class="d-block mb-3 text-muted">Copyright &copy; 2020 ORC Roof Cleaning. All rights reserved.</small>
 					</div>
 					<div class="col-6 col-md">
